Fixed CommentController issues